# watercolor

./: .gitignore  Dockerfile  LICENSE  NOTICE  README.md  app.py  auto_watercolorize.py  debug_simulation_step.py  docker-compose.yml  effect_main.py  environment.yml  generate_test_data.py  main.py  pyproject.toml  requirements.txt  simulation_main.py  test_auto_watercolorize.py  test_fluid.py  test_integration.py  test_io_utils.py  test_kubelka_munk.py  test_performance.py  test_pigment.py  test_renderer.py  test_simulation.py  test_simulation_main.py  test_watercolor.py  watercolor copy 2.py  watercolor copy.py  watercolor.py
.devcontainer/: devcontainer.json
docs/: Computer-Generated Watercolor.md
effect/: watercolor_effect.py
scripts/: README.md  watercolorize_image.py
simulation/: __init__.py  fluid_simulation.py  kubelka_munk.py  optimized_kernels.py  paper.py  pigment.py  renderer.py  test_watercolor_simulation.py  watercolor_simulation.py
src/: __init__.py  auto_watercolorize.py
test_data/: pigment_properties.json
tests/: README.md  conftest.py  test_auto_watercolorize.py  test_effects.py  test_fluid.py  test_glazes_performance.py  test_integration.py  test_kubelka_munk.py  test_paper.py  test_paper_core.py  test_performance.py  test_pigment.py  test_renderer.py  test_rendering.py  test_simulation.py  test_simulation_core.py  test_simulation_main.py  test_utils.py  test_watercolor.py  test_watercolor_simulation.py
watercolor/: __init__.py  __main__.py  config.py  core.py  processor.py  (+1 more)
watercolor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+75 files in other folders)
