[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "watercolor"
version = "0.1.0"
description = "Watercolor simulation + convenience watercolorize() callable."
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "pillow", "scikit-learn"]

[tool.setuptools.packages.find]
include = ["watercolor*"]
